[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Gear/Priamry_slider.gd" type="Script" id=1]

[node name="Priamry_Slider" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rof" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( -803.909, -40 )
text = "Rof"

[node name="Rof_Slider" type="HSlider" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 34.0
min_value = 10.0
max_value = 40.0
step = 5.0
value = 10.0

[node name="Dammage" type="Label" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( -803.909, -40 )
text = "Dammage"

[node name="Dammage_Slider" type="HSlider" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 72.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 1024.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( -803.909, -40 )

[node name="HSlider3" type="HSlider" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 1024.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="VBoxContainer/Rof_Slider" to="VBoxContainer" method="_on_Rof_Slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Dammage_Slider" to="VBoxContainer" method="_on_Dammage_Slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider3" to="VBoxContainer" method="_on_HSlider3_value_changed"]
